register new user

--- a/git/formuladb-env/frmdb-apps/formuladb-io/_footer.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/_footer.html
@@ -5,7 +5,8 @@
                 © 2019 FormulaDB
             <br>
             <small>
-                webdesign inspiration <br/>
+                webdesign inspiration 
+                <br>
                 <a href="https://bootswatch.com/" target="_blank">Bootswatch</a>,
                 <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>,
                 <a href="https://themewagon.com" target="_blank">ThemeWagon</a>,
