--- a/git/formuladb-env/frmdb-apps/formuladb-io/pricing.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/pricing.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="card mb-4 box-shadow frmdb-bg-1 frmdb-bg-1-info-gradient text-white">
                             <div class="card-header bg-transparent">
-                                <h4 class="text-white">Website</h4>
+                                <h4 class="text-white">Business</h4>
                             </div>
                             <div class="card-body">
                                 <h1 class="card-title mb-0 text-white">$5</h1>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="card mb-4 box-shadow frmdb-bg-1 frmdb-bg-1-success-gradient text-white" style="transform: scale(1.05)">
                             <div class="card-header bg-transparent">
-                                <h4 class="text-white">Business</h4>
+                                <h4 class="text-white">Corporate</h4>
                             </div>
                             <div class="card-body">
                                 <h1 class="card-title mb-0 text-white">$10</h1>
@@ -158,7 +158,7 @@
                         </div>
                         <div class="card mb-4 box-shadow frmdb-bg-1 frmdb-bg-1-dark-gradient text-white" style="transform: scale(1.02)">
                             <div class="card-header bg-transparent">
-                                <h4 class="text-white">Enterprise</h4>
+                                <h4 class="text-white">Agency</h4>
                             </div>
                             <div class="card-body">
                                 <h1 class="card-title mb-0 text-white">$40</h1>
@@ -215,6 +215,8 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <div id="frmdb-notification-container" style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
 </body>
 </html>
