--- a/git/formuladb-env/frmdb-apps/users/login.html
+++ b/git/formuladb-env/frmdb-apps/users/login.html
@@ -9,7 +9,7 @@
   <header class="header-global">
     <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
       <div class="container">
-        <a class="btn bg-primary mr-lg-5" href="index.html"><img src="/formuladb-env/frmdb-apps/formuladb-io/static/logo.png" style="height: 40px"></a>
+        <a class="btn bg-primary mr-lg-5" href="index.html"><img src="/formuladb-env/frmdb-apps/formuladb-io/static/logo.png" style="height: 32px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false"
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -36,18 +36,10 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link-icon" href="https://github.com/formuladb/argon-design-system" target="_blank" data-toggle="tooltip"
+              <a class="nav-link nav-link-icon" href="https://github.com/formuladb" target="_blank" data-toggle="tooltip"
                 title="Star us on Github">
                 <i class="frmdb-i-github"></i>
                 <span class="nav-link-inner--text d-lg-none">Github</span>
-              </a>
-            </li>
-            <li class="nav-item d-none d-lg-block ml-lg-4">
-              <a href="https://www.creative-tim.com/product/argon-design-system" target="_blank" class="btn btn-neutral btn-icon">
-                <span class="btn-inner--icon">
-                  <i class="frmdb-i-cloud-download mr-2"></i>
-                </span>
-                Download
               </a>
             </li>
           </ul>
@@ -56,7 +48,7 @@
     </nav>
   </header>
   <main>
-    <section class="section section-shaped section-lg">
+    <section class="section section-lg">
       <div class="shape shape-style-1 bg-gradient-default">
         <span></span>
         <span></span>
@@ -88,7 +80,7 @@
                 <div class="text-center text-muted mb-4">
                   <small>Or sign in with credentials</small>
                 </div>
-                <form role="form" method="POST" action="/login">
+                <form role="form" method="POST" action="login">
                   <div class="form-group mb-3">
                     <div class="input-group input-group-alternative">
                       <div class="input-group-prepend">
