--- a/git/formuladb-env/frmdb-apps/users/_head.html
+++ b/git/formuladb-env/frmdb-apps/users/_head.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="./favicon.svg">
-<title>King Hotel Booking Page</title>
+<title>FormulaDB - Sign Up</title>
 <link rel="stylesheet" href="./formuladb-look.css">
 <link rel="icon" href="./favicon.svg">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
