finalized add row in data grid

--- a/git/formuladb-env/frmdb-apps/formuladb-io/contact.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/contact.html
@@ -18,7 +18,7 @@
     <section class="section mt-5">
         <div class="container" style="position: relative; z-index: 2">
             <div class="card card-profile shadow mx-3 mx-md-5">
-                <div class="card-body" data-frmdb-record="ContactRequest~~$FRMDB_NEW_RECORD">
+                <div class="card-body" data-frmdb-record="ContactRequest~~$AUTO_GENERATE_ID_FOR_NEW_RECORD">
                     <form>
                         <div class="form-group">
                             <input type="email" class="form-control" id="email" placeholder="your@email" required="" data-frmdb-value="::email">
