--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="frmdb_display_date" content="">
 </head>
-<body data-frmdb-record="Room_Booking~~$FRMDB_NEW_RECORD" data-frmdb-page-param="$FRMDB.PageParameters.new_room_booking" class="frmdb-editor-normal">
+<body data-frmdb-record="Room_Booking~~$AUTO_GENERATE_ID_FOR_NEW_RECORD" data-frmdb-page-param="$FRMDB.PageParameters.new_room_booking" class="frmdb-editor-normal">
     <frmdb-t-header class="" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
         <div class="jumbotron">
             <h1 class="display-4">Book Now</h1>
