--- a/formuladb/editor-new-app-modal.html
+++ b/formuladb/editor-new-app-modal.html
@@ -17,7 +17,7 @@
                         <label class="col-sm-3 control-label">App name</label>
                         <div class="col-sm-9 input">
                             <div>
-                                <input name="appName" type="text" class="form-control" placeholder="new-app-name" required pattern="[-a-z]+"
+                                <input name="name" data-frmdb-value="name" type="text" class="form-control" placeholder="new-app-name" required pattern="[-a-z]+"
                                     oninput="this.value = this.value.replace(/[A-Z]/g, v => v.toLowerCase()).replace(/[^-a-z]/g, '-'); 
                                         this.closest('form').querySelector('#appDisplayName').value = this.value.replace(/-/g, ' ').replace(/(^|(?<= ))[a-z]/g, v => v.toUpperCase())">
                             </div>
@@ -42,6 +42,32 @@
                     </div>
 
                     <div class="form-group row" data-key="href">
+                        <label class="col-sm-3 control-label">App category</label>
+                        <div class="col-sm-9 input">
+                            <div>
+                                <input  name="category" data-frmdb-value="category" type="text" class="form-control" placeholder="e.g. Food & Travel" required>
+                            </div>
+
+                            <div class="alert alert-danger" role="alert" style="display: none">
+                                A simple danger alert—check it out!
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row" data-key="href">
+                        <label class="col-sm-3 control-label">App description</label>
+                        <div class="col-sm-9 input">
+                            <div>
+                                <input name="description" data-frmdb-value="description" type="text" class="form-control" placeholder="e.g. Presentation, Online Orders, Online Booking, Blog" required>
+                            </div>
+
+                            <div class="alert alert-danger" role="alert" style="display: none">
+                                A simple danger alert—check it out!
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row" data-key="href">
                         <label class="col-sm-3 control-label">Clone App</label>
                         <div class="col-sm-9 input">
                             <select name="basedOnApp" class="form-control">
@@ -53,7 +79,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> Create App</button>
+                        <button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> <span data-frmdb-value="buttonText">button</span></button>
                         <button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="la la-close"></i> Cancel</button>
                     </div>
                 </div>
