app props are mandatory, updated all yaml files

--- a/git/formuladb-env/frmdb-apps/hotel-booking/index.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/index.html
@@ -199,6 +199,8 @@
     <div data-frmdb-fragment="_scripts.html"></div>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
