--- a/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
+++ b/git/formuladb-env/frmdb-apps/apollo-medical-center/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>FormulaDB Themes</title>
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="frmdb_display_date" content="">
 </head>
 <body data-frmdb-theme="Comfort" class="frmdb-editor-normal">
-    <frmdb-t-main-nav class="container bg-white fixed-top shadow">
+    <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/apollo-medical-center/static/54e3d64b4b57a814f6da8c7dda79367f1c37dfe752506c4870277ad5974dc25cbc_1280.jpg&quot;);">
-        <frmdb-t-main class="flex-grow-1 d-flex flex-column justify-content-center">
-            <div class="jumbotron w-100 text-center bg-transparent">
+    <frmdb-t-cover class="d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/apollo-medical-center/static/54e3d64b4b57a814f6da8c7dda79367f1c37dfe752506c4870277ad5974dc25cbc_1280.jpg&quot;);">
+        <frmdb-t-main class="flex-grow-1">
+            <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4">Title of website</h1>
+                <h1 class="display-4">Apollo Medical Center</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
                 <a href="javascript:void(0)" class="btn btn-primary mx-auto">Call To Action</a>
             </div>
         </frmdb-t-main>
-        <frmdb-t-aside class="container frmdb-section-dark">
+        <frmdb-t-aside class="">
             <div data-frmdb-fragment="_form.html"></div>
         </frmdb-t-aside>
     </frmdb-t-cover>
@@ -28,7 +31,7 @@
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/apollo-medical-center/static/55e5d24a4a50a514f6da8c7dda79367f1c37dfe752506c4870277ad5974dc65fb0_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
-                <div class="jumbotron w-100 text-center bg-transparent">
+                <div class="jumbotron">
                     <h2>Section Heading</h2>
                     <p data-i18n="en">Pretium quis neque a faucibus. Quisque tempus pharetra tellus, sed molestie velit mattis ut. Suspendisse feugiat ligula dui, at
                         convallis turpis auctor et.&nbsp;</p>
@@ -37,7 +40,7 @@
             </div>
         </div>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/apollo-medical-center/static/54e6d0474250af14f6da8c7dda79367f1c37dfe752506c4870277ad5974dc551be_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/apollo-medical-center/static/54e6d0474250af14f6da8c7dda79367f1c37dfe752506c4870277ad5974dc551be_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2>Cards with Icons</h2>
@@ -45,39 +48,39 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-user-md-job-medical-nurse-occupation-physician-profile-surgeon"></frmdb-icon> Doctors
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-notes-medical-clipboard-doctor-ehr-health-history-records"></frmdb-icon> Patient records
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-hospital-alt-building-emergency_room-medical_center"></frmdb-icon>&nbsp;hospital equipment
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-procedures-EKG-bed-electrocardiogram-health-hospital-life-patient-vital"></frmdb-icon> medical procedures
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-x-ray-health-medical-radiological_images-radiology-skeleton"></frmdb-icon> x-rays
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-ambulance-emergency-emt-er-help-hospital-support-vehicle"></frmdb-icon> emergency
                     </h4>
@@ -91,7 +94,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
-                <div class="jumbotron w-100 text-center bg-transparent">
+                <div class="jumbotron">
                     <h2>Section Heading</h2>
                     <p>Etiam porta magna eu rutrum rhoncus. Sed ut tempor nibh. Nullam tempus egestas ullamcorper. Proin sollicitudin diam vel risus egestas, in
                         fringilla ligula finibus.</p>
@@ -105,7 +108,14 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
