fixed navigation to seo friendly urls

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -93,8 +93,8 @@
                     aria-expanded="false" data-frmdb-value="selectedAppName">
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" data-frmdb-table="$FRMDB.$App[]" data-frmdb-table-limit="50" data-frmdb-editor-link
-                        data-frmdb-value=":$ID:$FRMDB.$App[]._id" data-frmdb-attr="href:CONCATENATE('../', $ID(_id), '/index.html?frmdbRender=editor'):$FRMDB.$App[]">app 1</a>
+                    <a class="dropdown-item" href="javascript:void(0)" data-frmdb-table="$FRMDB.$App[]" data-frmdb-table-limit="50"
+                        data-frmdb-value=":$ID:$FRMDB.$App[]._id" data-frmdb-attr="data-frmdb-editor-change-app:$ID(_id):$FRMDB.$App[]">app 1</a>
                 </div>
             </li>
             <li class="nav-item dropdown frmdb-dropdown-hover">
