--- a/git/formuladb-env/frmdb-apps/kids-playground/_nav.html
+++ b/git/formuladb-env/frmdb-apps/kids-playground/_nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light navbar-expand-lg" data-frmdb-fragment="_nav.html" data-frmdb-highlight-ignore="">
+<nav class="navbar" data-frmdb-fragment="_nav.html" data-frmdb-highlight-ignore="">
 <a class="navbar-brand" href="index.html">
     <i class="fas fa-image" style="color: var(--primary)"></i>
     <span>BrandName</span>
