--- a/git/formuladb-env/frmdb-apps/kids-playground/index.html
+++ b/git/formuladb-env/frmdb-apps/kids-playground/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>FormulaDB Themes</title>
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="frmdb_display_date" content="">
 </head>
-<body data-frmdb-theme="Comfort" class="frmdb-editor-preview">
-    <frmdb-t-main-nav class="container bg-white fixed-top shadow">
+<body data-frmdb-theme="Comfort" class="frmdb-editor-preview frmdb-editor-normal">
+    <frmdb-t-main-nav class="">
         <div data-frmdb-fragment="_nav.html"></div>
     </frmdb-t-main-nav>
-    <frmdb-t-cover class="min-vh-100 overflow-hidden d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e8d1444f52a414f6da8c7dda79367f1c37dfe752506c4870277ad59045c75fb8_1280.jpg&quot;);">
-        <frmdb-t-main class="frmdb-bg-tint-secondary-50 flex-grow-1 d-flex flex-column justify-content-center">
-            <div class="jumbotron animated slideInUp w-100 text-center bg-transparent" data-aos="slideInUp">
+    <frmdb-t-cover class="d-flex flex-column justify-content-between frmdb-bg-tint-secondary-50" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e8d1444f52a414f6da8c7dda79367f1c37dfe752506c4870277ad59045c75fb8_1280.jpg&quot;);">
+        <frmdb-t-main class="frmdb-bg-tint-secondary-50 flex-grow-1">
+            <div class="jumbotron animated slideInUp" data-aos="slideInUp">
                 <h6 data-i18n="en">all ages wellcome</h6>
                 <h1 class="display-4" data-i18n="en">fun playground</h1>
                 <p data-i18n="en">We have the right kind of fun you need</p>
@@ -20,11 +23,11 @@
     <frmdb-t-aside class="container">
         <div data-frmdb-fragment="_form.html"></div>
     </frmdb-t-aside>
-    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/5ee1d7474250b108f5d08460962936771d3edce4524c704c7d2e7ad4974ec15e_1280.jpg&quot;);">
+    <frmdb-t-media-section-main style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/5ee1d7474250b108f5d08460962936771d3edce4524c704c7d2e7ad4974ec15e_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="container">
             <div class="row">
-                <div class="jumbotron col-md-5 w-100 text-center bg-transparent" data-aos="slideInUp">
+                <div class="jumbotron col-md-5" data-aos="slideInUp">
                     <h2 data-i18n="en">kids parties</h2>
                     <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at,
                         tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
@@ -40,65 +43,65 @@
             <p>Section lead paragraph, some text about the content described in this section.</p>
         </div>
         <div class="card-deck">
-            <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <frmdb-t-card-media-main class="" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/kids-playground/static/57e0dc414350ad14f6da8c7dda79367f1c37dfe752506c4870277ad49e4ac25ab9_1280.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">cozy playground</h5>
                     <h6>Card 1 subtitle</h6>
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)">Action</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note>
+                <frmdb-t-card-note class="">
                     <span>INFO 
                         <small>info</small>
                     </span>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <frmdb-t-card-media-main class="" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/kids-playground/static/54e2d4464c52ad14f6da8c7dda79367f1c37dfe752506c4870277ad5924ac05bb1_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">cool games</h5>
                     <h6>Card 2 subtitle</h6>
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)">Action</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note>
+                <frmdb-t-card-note class="">
                     <span>INFO 
                         <small>info</small>
                     </span>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <frmdb-t-card-media-main class="" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/kids-playground/static/57e4d3444850a414f6da8c7dda79367f1c37dfe752506c4870277ad49e45c750bb_640.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">laser tag</h5>
                     <h6>Card 3 subtitle</h6>
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)">Action</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note>
+                <frmdb-t-card-note class="">
                     <span>INFO 
                         <small>info</small>
                     </span>
                 </frmdb-t-card-note>
             </frmdb-t-card-media-main>
-            <frmdb-t-card-media-main class="border-0" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
+            <frmdb-t-card-media-main class="" style="display: grid;" data-aos="slideInLeft" data-aos-once="false">
                 <frmdb-t-img class="overflow-hidden" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/kids-playground/static/52e8d5474f5bb108f5d08460962936771d3edce4524c704c7d2e7ad49745c558_1280.jpg')"></frmdb-t-img>
                 <div class="card-body">
                     <h5 data-i18n="en">escalade</h5>
                     <h6>Card 4 subtitle</h6>
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
-                <frmdb-t-card-action>
-                    <a href="javascript:void(0)">Action</a>
+                <frmdb-t-card-action class="">
+                    <a href="javascript:void(0)" class="">Action</a>
                 </frmdb-t-card-action>
-                <frmdb-t-card-note>
+                <frmdb-t-card-note class="">
                     <span>INFO 
                         <small>info</small>
                     </span>
@@ -112,7 +115,7 @@
                 <img class="img-fluid" src="/formuladb-env/frmdb-apps/kids-playground/static/57e5d2424d56ab14f6da8c7dda79367f1c37dfe752506c4870277ad5924ac25ebd_640.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
-                <div class="jumbotron w-100 text-center bg-transparent" data-aos="slideInUp">
+                <div class="jumbotron" data-aos="slideInUp">
                     <h2 data-i18n="en">good vibes</h2>
                     <p>Pretium quis neque a faucibus. Quisque tempus pharetra tellus, sed molestie velit mattis ut. Suspendisse feugiat ligula dui, at
                         convallis turpis auctor et. Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula.</p>
@@ -124,7 +127,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
-                <div class="jumbotron w-100 text-center bg-transparent" data-aos="slideInUp">
+                <div class="jumbotron" data-aos="slideInUp">
                     <h2 data-i18n="en"></h2>
                     <h2 data-i18n="en">
                         <i>WHEN KIDS PLAY, PARENTS RELAX...</i>
@@ -139,7 +142,7 @@
             </div>
         </div>
     </section>
-    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e2dc404251a514f6da8c7dda79367f1c37dfe752506c4870277ad49e45c15ebe_1280.jpg&quot;);">
+    <frmdb-t-section-cards-icon style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/kids-playground/static/54e2dc404251a514f6da8c7dda79367f1c37dfe752506c4870277ad49e45c15ebe_1280.jpg&quot;);" class="">
         <frmdb-t-section-divider></frmdb-t-section-divider>
         <div class="section_title text-center">
             <h2 data-i18n="en">we like to party</h2>
@@ -147,39 +150,39 @@
         </div>
         <div class="container">
             <div class="card-deck frmdb-cards-3">
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-expand-arrow-bigger-enlarge-resize"></frmdb-icon>&nbsp;600 square meters
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-handshake-agreement-greeting-meeting-partnership"></frmdb-icon>&nbsp;exclusiveness
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-user-clock-alert-person-remind-time"></frmdb-icon>&nbsp;unlimited laser tag
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-hamburger-bacon-beef-burger-burger_king-cheeseburger-fast_food-grill-ground_beef-mcdonalds-sandwich"></frmdb-icon>&nbsp;kids menu
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-gamepad-arcade-controller-d-pad-joystick-video-video_game"></frmdb-icon>&nbsp;board games
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </frmdb-t-card-icon-main>
-                <frmdb-t-card-icon-main class="border-light p-4 bg-transparent">
+                <frmdb-t-card-icon-main class="">
                     <h4 data-i18n="en">
                         <frmdb-icon name="fontawesome-solid-parking-auto-car-garage-meter"></frmdb-icon>&nbsp;parking
                     </h4>
@@ -192,7 +195,12 @@
     </frmdb-t-section-cards-icon>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
 </body>
 </html>
 </html>
