added first marketing page, added reload button to editor

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -19,15 +19,19 @@
 
             <div class="btn-group mr-3" role="group">
                 <button class="btn btn-light" title="Undo most recent change" id="undo-btn" data-frmdb-action="undo" data-vvveb-shortcut="ctrl+z">
-                    <i class="frmdb-i-undo"></i>
+                    <i class="frmdb-i-1841775-undo"></i>
                 </button>
 
                 <button class="btn btn-light" title="Redo change" id="redo-btn" data-frmdb-action="redo" data-vvveb-shortcut="ctrl+shift+z">
-                    <i class="frmdb-i-undo frmdb-i-flip-horizontal"></i>
+                    <i class="frmdb-i-1841775-undo frmdb-i-flip-horizontal"></i>
                 </button>
 
                 <button class="btn btn-light" onclick="$FRMDB_EDITOR.addPageElement()" href="javascript:void(0)" title="Add Page Element">
                     <i class="frmdb-i-plus-circle"></i>
+                </button>
+
+                <button class="btn btn-light" onclick="$FRMDB_EDITOR.reloadCanvas()" href="javascript:void(0)" title="Add Page Element">
+                    <i class="frmdb-i-1651209-refresh"></i>
                 </button>
 
             </div>
