--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -2178,6 +2178,33 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-1630227-link"></i>
+            </span>
+            <br>
+            <span class='label'>1630227-link</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-1651209-refresh"></i>
+            </span>
+            <br>
+            <span class='label'>1651209-refresh</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-1841775-undo"></i>
+            </span>
+            <br>
+            <span class='label'>1841775-undo</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-200559-themes"></i>
             </span>
             <br>
@@ -2191,6 +2218,15 @@
             </span>
             <br>
             <span class='label'>2669552-font</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-2718381-undo"></i>
+            </span>
+            <br>
+            <span class='label'>2718381-undo</span>
         </div>
 
 
