--- a/git/formuladb-env/frmdb-apps/formuladb-io/marketing-restaurant.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/marketing-restaurant.html
@@ -7,41 +7,41 @@
     <meta name="frmdb_display_date" content="2020-04-13">
 </head>
 <body class="frmdb-editor-normal">
-    <div style="position: fixed; z-index: 67895; width: 100vw; height: 100vh; display: grid; padding: 20px; --frmdb-bg-img: url('./static/marketing-restaurant-editor-screenshot.png')" class="frmdb-bg-2 frmdb-bg-cover frmdb-bg-2-dark-solid d-flex flex-column align-items-center justify-content-center">
-        <h1 class="display-1 animated bounceIn text-white" style="font-weight: 700; animation-duration: 1.5s; animation-delay: 0s;">Restaurant Website</h1>
-        <h1 class="display-1 animated bounceIn text-white" style="font-weight: 700; animation-duration: 1.5s; animation-delay: 1.4s;">Setup in Minutes</h1>
-        <h1 class="display-1 text-white" style="font-weight: 700; animation-name: slideInRightFromHidden, slideOutLeftToHidden; animation-duration: 1.5s, 1.5s; animation-delay: 3s;">No Coding</h1>
-        <h1>Online Orders, Self Delivery</h1>
-        <h1>Contact Form, Blog</h1>
+    <div style="position: fixed; z-index: 67895; --frmdb-bg-img: url('./static/marketing-restaurant-editor-screenshot.png')" class="frmdb-bg-2 frmdb-bg-cover frmdb-bg-2-dark-solid align-items-center justify-content-center">
+        <div id="marketing-message" class="" style="width: 100vw; height: 100vh; grid-template-columns: 80vw; 
+ grid-template-rows: auto auto auto; align-items: center; justify-content: center; display: none;">
+            <h1 class="grid-1-1-1-1 display-1 animated bounceIn text-white text-center" style="font-weight: 700; animation-duration: 1.5s; animation-delay: 0s;">Restaurant Website</h1>
+            <h1 class="grid-1-2-1-1 display-1 animated bounceIn text-white text-center" style="font-weight: 700; animation-duration: 1.5s; animation-delay: 1.5s;">Setup in Minutes</h1>
+            <div class="grid-1-3-1-1 animated slideInRight" style="animation-duration: 1s; animation-delay: 3s;">
+                <h1 class="display-1 text-white text-center animated slideOutLeft" style="font-weight: 700; animation-duration: 1s; animation-delay: 4s;">No Coding</h1>
+            </div>
+            <div class="grid-1-3-1-1 animated slideInRight" style="animation-duration: 1s; animation-delay: 5s;">
+                <h1 class="display-1 text-white text-center animated slideOutLeft" style="font-weight: 700; animation-duration: 1s; animation-delay: 6s;">Online Orders, Self Delivery</h1>
+            </div>
+            <div class="grid-1-3-1-1 animated slideInRight" style="animation-duration: 1s; animation-delay: 7s;">
+                <h1 class="display-1 text-white text-center animated slideOutLeft" style="font-weight: 700; animation-duration: 1s; animation-delay: 8s;">Contact Form, Blog</h1>
+            </div>
+            <div class="grid-1-3-1-1 animated slideInRight text-center" style="animation-duration: 1s; animation-delay: 9s;">
+                <img src="/formuladb-env/frmdb-apps/formuladb-io/static/logo.png">
+            </div>
+        </div>
     </div>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <style>
-@keyframes slideInRightFromHidden {
-  from {
-    width: 0px;
-    max-width: 0px;
-    overflow: hidden;
-  }
-  to {
-    width: auto;
-    max-width: auto;
-    overflow: auto;
-  }
-}
-@keyframes slideOutLeftToHidden {
-  from {
-    width: auto;
-    max-width: auto;
-    overflow: auto;
-  }
-  to {
-    width: 0px;
-    max-width: 0px;
-    overflow: hidden;
-  }
-}
-</style>
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+    var el = document.querySelector('#marketing-message');
+        el.style.display = 'grid';
+});
+</script>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
 </body>
 </html>
