--- a/git/formuladb-env/frmdb-apps/formuladb-io/marketing-restaurant.html
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/marketing-restaurant.html
@@ -7,22 +7,22 @@
     <meta name="frmdb_display_date" content="2020-04-13">
 </head>
 <body class="frmdb-editor-normal">
-    <div style="position: fixed; z-index: 67895; --frmdb-bg-img: url('./static/marketing-restaurant-editor-screenshot.png')" class="frmdb-bg-2 frmdb-bg-cover frmdb-bg-2-dark-solid align-items-center justify-content-center">
-        <div id="marketing-message" class="" style="width: 100vw; height: 100vh; grid-template-columns: 80vw; 
+    <div style="position: fixed; z-index: 67895; --frmdb-bg-img: url('./static/marketing-restaurant-editor-screenshot.png')" class="frmdb-bg-3 frmdb-bg-cover frmdb-bg-2-dark-solid frmdb-bg-3-dark-solid align-items-center justify-content-center">
+        <div id="marketing-message" class="" style="width: 100vw; height: 100vh; grid-template-columns: 100vw; 
  grid-template-rows: auto auto auto; align-items: center; justify-content: center; display: none;">
-            <h1 class="grid-1-1-1-1 display-1 animated bounceIn text-white text-center" style="font-weight: 700; animation-duration: 1.5s; animation-delay: 0s;">Restaurant Website</h1>
-            <h1 class="grid-1-2-1-1 display-1 animated bounceIn text-white text-center" style="font-weight: 700; animation-duration: 1.5s; animation-delay: 1.5s;">Setup in Minutes</h1>
-            <div class="grid-1-3-1-1 animated slideInRight" style="animation-duration: 1s; animation-delay: 3s;">
-                <h1 class="display-1 text-white text-center animated slideOutLeft" style="font-weight: 700; animation-duration: 1s; animation-delay: 4s;">No Coding</h1>
+            <h1 class="px-4 grid-1-1-1-1 display-1 animated bounceIn text-white text-center" style="font-weight: 700; font-size: 6vmax; animation-duration: 1.5s; animation-delay: 0s;">Restaurant website</h1>
+            <h1 class="shadow grid-1-2-1-1 display-1 animated bounceIn text-white text-center" style="font-weight: 700; font-size: 6vmax; animation-duration: 1.5s; animation-delay: 1.5s;">setup in minutes...</h1>
+            <div class="px-3 grid-1-3-1-1 animated slideInRight" style="animation-duration: 1s; animation-delay: 3s;">
+                <h1 class="display-1 text-white text-center animated slideOutLeft" style="font-weight: 700; font-size: 6vmax; animation-duration: 1s; animation-delay: 4s;">no coding</h1>
             </div>
-            <div class="grid-1-3-1-1 animated slideInRight" style="animation-duration: 1s; animation-delay: 5s;">
-                <h1 class="display-1 text-white text-center animated slideOutLeft" style="font-weight: 700; animation-duration: 1s; animation-delay: 6s;">Online Orders, Self Delivery</h1>
+            <div class="px-3 grid-1-3-1-1 animated slideInRight" style="animation-duration: 1s; animation-delay: 5s;">
+                <h1 class="display-1 text-white text-center animated slideOutLeft" style="font-weight: 700; font-size: 6vmax; animation-duration: 1s; animation-delay: 6s;">online orders, self delivery</h1>
             </div>
-            <div class="grid-1-3-1-1 animated slideInRight" style="animation-duration: 1s; animation-delay: 7s;">
-                <h1 class="display-1 text-white text-center animated slideOutLeft" style="font-weight: 700; animation-duration: 1s; animation-delay: 8s;">Contact Form, Blog</h1>
+            <div class="vw-100 grid-1-3-1-1 animated slideInRight" style="animation-duration: 1s; animation-delay: 7s;">
+                <h1 class="display-1 text-white text-center animated slideOutLeft" style="font-weight: 700; font-size: 6vmax; animation-duration: 1s; animation-delay: 8s;">contact form, blog</h1>
             </div>
-            <div class="grid-1-3-1-1 animated slideInRight text-center" style="animation-duration: 1s; animation-delay: 9s;">
-                <img src="/formuladb-env/frmdb-apps/formuladb-io/static/logo.png">
+            <div class="px-3 grid-1-4-1-1 text-center">
+                <img src="./static/formuladb.io.svg" style="width: 75vmin;">
             </div>
         </div>
     </div>
