--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -30,7 +30,7 @@
                     <i class="frmdb-i-plus-circle"></i>
                 </button>
 
-                <button class="btn btn-light" onclick="$FRMDB_EDITOR.reloadCanvas()" href="javascript:void(0)" title="Add Page Element">
+                <button class="btn btn-light" onclick="$FRMDB_EDITOR.reloadCanvas()" href="javascript:void(0)" title="Reload Page">
                     <i class="frmdb-i-1651209-refresh"></i>
                 </button>
 
