--- a/git/formuladb-env/frmdb-apps/users/login.html
+++ b/git/formuladb-env/frmdb-apps/users/login.html
@@ -66,11 +66,11 @@
               <div class="card-header bg-white pb-5">
                 <div class="text-muted text-center mb-3"><small>Sign in with</small></div>
                 <div class="btn-wrapper text-center">
-                  <a href="#" class="btn btn-neutral btn-icon">
+                  <a href="/auth/facebook" class="btn btn-neutral btn-icon">
                     <span class="btn-inner--icon"><i class="frmdb-i-facebook"></i>
                       <span class="btn-inner--text">Facebook</span>
                   </a>
-                  <a href="#" class="btn btn-neutral btn-icon">
+                  <a href="/auth/google" class="btn btn-neutral btn-icon">
                     <span class="btn-inner--icon"><i class="frmdb-i-google"></i>
                       <span class="btn-inner--text">Google</span>
                   </a>
