--- a/git/formuladb-env/frmdb-apps/pizza-time/order.html
+++ b/git/formuladb-env/frmdb-apps/pizza-time/order.html
@@ -14,10 +14,7 @@
         <frmdb-t-main class="">
             <div class="jumbotron col-12 col-lg-8">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4">PIZZA TIME</h1>
-                <p>Lead paragraph providing a short introduction to you website or app,
-                    <br>it would be good to keep it under two lines of text
-                </p>
+                <h1 class="display-4">Order Now</h1>
             </div>
         </frmdb-t-main>
         <frmdb-t-aside class="">
@@ -182,8 +179,6 @@
     <frmdb-t-section-divider></frmdb-t-section-divider>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
-    <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
-    <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
     <frmdb-fe></frmdb-fe>
     <frmdb-notification-container style="position: fixed; top: 0px; right: 0px; padding: 5px; z-index: 56789;"></frmdb-notification-container>
